Cleaned up code to be ready for zapier

--- a/src/client/scenes/UNNumbers/styles.scss
+++ b/src/client/scenes/UNNumbers/styles.scss
@@ -41,6 +41,10 @@
 .class2 {
   background: linear-gradient(-45deg, $red, $yellow);
 }
+
+.test {
+  border-radius: 10px;
+}
 .class3 {
   background: linear-gradient(-45deg, $blue, $pink);
 }
